# mrt-ubike-analysis

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  project-description.md  pyproject.toml  requirements.txt
config/: default.json
data/: README.md
docs/: 00_overview.md  01_phase1_bootstrap.md  01_project_structure.md  02_phase2_api_request_flow.md  02_tdx_module_design.md  03_core_schemas.md  03_phase3_tdx_base_client.md  04_cleaning_integration_strategy.md  04_phase4_tdx_dataset_clients.md  05_features_and_analytics.md  05_phase5_bronze_ingestion_scripts.md  06_phase6_build_silver.md  07_phase7_run_pipeline_mvp.md  09_docker_longrun.md
ops/: README.md
scripts/: archive_bronze.py  build_analytics.py  build_features.py  build_silver.py  build_silver_locked.py  build_silver_sqlite.py  build_station_district_map.py  collect_bike_availability.py  collect_bike_availability_loop.py  collect_tdx_continuous.py  collect_weather_open_meteo.py  collector_status.py  extract_bike_stations.py  extract_metro_stations.py  fetch_external_metro_stations_osm.py  fetch_poi_overpass.py  import_metro_timeseries.py  restart_collector_if_stale.py  run_api.py  run_pipeline_mvp.py  scheduler_loop.py  scheduler_status.py  ui_playwright_smoke.py  validate_bronze.py  validate_external_inputs.py  validate_silver.py  validate_silver_extended.py  validate_ui_pages.py  weather_status.py
tests/: conftest.py  test_analytics.py  test_api_status.py  test_config_loader_env.py  test_external_inputs.py  test_feature_targets.py  test_gis_boundaries.py  (+10 more)
(+65 files in other folders)
