[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metrobikeatlas"
version = "0.1.0"
description = "Metro × shared bike × city factors analysis web app (Taiwan)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
  "numpy>=1.24",
  "pandas>=2.0",
  "fastapi>=0.110",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "python-dotenv>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
